# StormBetsServer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  admindto.cpp  admindto.h  betdto.cpp  betdto.h  conanfile.txt  create_db.sql  dbconnection.cpp  dbconnection.h  dto.cpp  event.h  install_build_dep.sh  isntall_gcc13.sh  jsondataextractor.cpp  jsondataextractor.h  keyboardcreator.cpp  main.cpp  match.cpp  match.h  messageeventsgenerator.hpp  messagestosend.h  playerdto.cpp  playerdto.h  processing.cpp  processing.h  regexmatcher.cpp  requester.cpp  setup_mysqldb.txt
.github/workflows/: docker-image.yml
include/: boostClient.h  client.h  curlClient.h  dbconnection.h  jsondataextractor.h  keyboardcreator.h  match.h  messageeventsgenerator.h  messageeventsgenerator.hpp  messagestosend.h  processing.h  regexmatcher.h  requester.h
include/dtos/: admindto.h  betdto.h  dto.h  matchdto.h  playerdto.h
src/: EnvManager.hpp  boostClient.cpp  client.cpp  curlClient.cpp  dbconnection.cpp  jsondataextractor.cpp  keyboardcreator.cpp  main.cpp  match.cpp  messageeventsgenerator.cpp  processing.cpp  requester.cpp
src/dtos/: admindto.cpp  betdto.cpp  dto.cpp  matchdto.cpp  playerdto.cpp
tests/: client_test.hpp  main_test.cpp  regex_test.hpp  test_regexmatcher.cpp  test_regexmatcher.h
